tests/sqlcmd/baselines/errors/file_command1.errbaseline
Script file 'nonexist' could not be found.
nonexist (No such file or directory)
